[package]
name = "hv-tls-eof"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1.0.0"
bytes = "1.5.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
chrono = "0.4.31"
futures = "0.3.29"
